# socratic

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  run_tests.py
core/: __init__.py  agent.py  dialogue.py  judge.py
games/: __init__.py  creativity.py  reasoning.py
tests/: conftest.py  test_core.py  test_creativity.py  test_games.py  test_judge.py
utils/: __init__.py  config.py  monitoring.py
